use recommended settings for running jar